// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`retry failures should succeed after multiple failures within the configured limit 1`] = `
{
  "requestDetails": {
    "ingressExpiry": Expiry {
      "_value": 1200000000000n,
    },
    "nonce": Uint8Array [
      204,
      189,
      125,
      194,
      87,
      124,
      177,
      53,
      69,
      176,
      128,
      137,
      49,
      99,
      145,
      118,
    ],
  },
  "requestId": ArrayBuffer [],
  "response": {
    "body": null,
    "headers": [],
    "ok": true,
    "status": 200,
    "statusText": "success!",
  },
}
`;

exports[`retry requests that fail due to a network failure 1`] = `
{
  "requestDetails": {
    "ingressExpiry": Expiry {
      "_value": 1200000000000n,
    },
    "nonce": Uint8Array [
      217,
      11,
      18,
      68,
      170,
      213,
      242,
      179,
      116,
      44,
      3,
      50,
      105,
      64,
      252,
      44,
    ],
  },
  "requestId": ArrayBuffer [],
  "response": {
    "body": null,
    "headers": [],
    "ok": true,
    "status": 200,
    "statusText": "success!",
  },
}
`;
